--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "url": "https://github.com/Skhmelyuk/excel_course/issues"
   },
   "homepage": "https://github.com/Skhmelyuk/excel_course#readme",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
+  }
 }
