--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "homepage": "https://github.com/Skhmelyuk/excel_course#readme",
   "private": true,
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   }
