--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
   },
   "homepage": "https://github.com/Skhmelyuk/excel_course#readme",
   "private": true,
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   }
